<resources>
    <string name="app_name">HostelApp</string>

    <!--    For Splash Activities-->
    <string name="hostel_app">Hostel Management Application</string>
    <string name="college_name">College of Engineering and Technology, Bhubaneswar </string>

    <!--    For Login Activities-->
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_register_now">New User ? Register Now</string>
    <string name="admin_login">ADMIN LOGIN </string>
    <string name="student_login">STUDENT LOGIN </string>
    <string name="UserName">Username</string>
    <string name="Password">Password</string>

    <!--    For Sign Up Activities-->
    <string name="Register">Register</string>
    <string name="Registration_number">Enter College Regd Number</string>
    <string name="admin_register">ADMIN REGISTER </string>
    <string name="student_register">STUDENT REGISTER </string>
    <string name="Register_Phone">Enter Mobile Number</string>
    <string name="register_name">Enter Your Name</string>
    <string name="Register_Username">Enter Your Email</string>
    <string name="Register_Password">Enter Password</string>
    <string name="Register_Role">Enter Your Role(Admin)</string>
    <string name="already_have_an_account">Already have an account ?</string>

    <!--    For Welcome Activities-->
    <string name="Welcome">Welcome</string>
    <string name="ContinueAsStudent">Continue As Student</string>
    <string name="ContinueAsAdmin">Continue As Admin</string>

</resources>